syntax = "proto3";
option java_multiple_files = true;
package com.drathveloper.grpc;

import "google/protobuf/timestamp.proto";

message UserAddress {
  string country = 1;
  string city = 2;
  string state = 3;
  string address = 4;
  string postalCode = 5;
}

message User {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  google.protobuf.Timestamp birthDate = 6;
  UserAddress address = 7;
}

message CreatedUser {
  int64 id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string phone = 6;
  google.protobuf.Timestamp birthDate = 7;
  string country = 8;
  string city = 9;
  string state = 10;
  string address = 11;
  string postalCode = 12;
}

message UserBulkLoadRequest {
  repeated User users = 1;
}

message UserBulkLoadResponse {
  repeated CreatedUser createdUsers = 1;
}

message EmptyRequest {}

service UserService {
  rpc getAllUsers(EmptyRequest) returns(UserBulkLoadResponse);
  rpc bulkLoad(UserBulkLoadRequest) returns(UserBulkLoadResponse);
  rpc getAllUsersServerStream(EmptyRequest) returns(stream CreatedUser);
  rpc bulkLoadServerStream(UserBulkLoadRequest) returns(stream CreatedUser);
  rpc bulkLoadClientStream(stream User) returns(UserBulkLoadResponse);
  rpc bulkLoadBidirectionalStream(stream User) returns(stream CreatedUser);
}
